--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # AI Service Configuration
 # Get your Gemini API key from: https://ai.google.dev/
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=yAIzaSyAz4RsP8KOlRIm_HWVcx4tceNK5ixv36u4
 
 # Optional: Claude API key as fallback (if you want to support multiple AI providers)
 # Get from: https://console.anthropic.com/
@@ -41,3 +41,6 @@ DEPLOY_URL=
 DEPLOY_PRIME_URL=
 CONTEXT=production
 REPOSITORY_URL=
+
+# AIzaSyAz4RsP8KOlRIm_HWVcx4tceNK5ixv36u4
+# 👆GeminiAPIキー
