--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
   "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
+    "pages/api/**/*.js": {
+      "runtime": "@vercel/node"
     }
   },
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/pages/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
