Fix Vercel deployment: convert API files to CommonJS format
- Convert ES modules (import/export) to CommonJS (require/module.exports)
- Simplify vercel.json to avoid runtime version conflicts
- Remove pages/ directory to use standard api/ structure

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # AI Service Configuration
 # Get your Gemini API key from: https://ai.google.dev/
-GEMINI_API_KEY=yAIzaSyAz4RsP8KOlRIm_HWVcx4tceNK5ixv36u4
+GEMINI_API_KEY=
 
 # Optional: Claude API key as fallback (if you want to support multiple AI providers)
 # Get from: https://console.anthropic.com/
