Fix Vercel deployment issues:
- Fix invalid runtime 'vercel/node@20.x' to 'nodejs18.x'
- Remove invalid /bin/www routing, use proper SPA routing to /index.html
- Remove duplicate pages/ directory
- Convert all API files to CommonJS (require/module.exports)
- Standardize on single api/ directory structure

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-  "version": 2,
   "functions": {
-    "api/**/*.js": {
-      "runtime": "vercel/node@20.x"
+    "api/*.js": {
+      "runtime": "nodejs18.x"
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/bin/www"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
